--- a/roles/draw_things/tasks/main.yml
+++ b/roles/draw_things/tasks/main.yml
@@ -22,7 +22,7 @@
     restart_policy: unless-stopped
     device_requests:
       - driver: nvidia
-        count: -1
+        device_ids: ["{{ blackwell_gpu_uuid }}"]
         capabilities:
           - ["gpu"]
     volumes:
