--- a/group_vars/all/llms.yml
+++ b/group_vars/all/llms.yml
@@ -1,14 +1,9 @@
-ollama_models:
-  - alias: Qwen3-4B-Instruct-2507-Q8
-    name: qwen3:4b-instruct-2507-q8_0
-    num_ctx: 16384
-
 model_group_alias:
-  home: "GLM-4.7-Flash-nothink"
-  home-fast: "GLM-4.7-Flash-nothink"
-  home-smart: "GLM-4.7-Flash"
+  home: "GPT-OSS-20B-vLLM-low"
+  home-fast: "GPT-OSS-20B-vLLM-low"
+  home-smart: "GPT-OSS-20B-vLLM-high"
   home-vision: "Qwen3-VL-8B-Instruct"
-  home-tiny: "Qwen3-4B-Instruct-2507-Q8"
+  home-tiny: "GPT-OSS-20B-vLLM-low"
 
 litellm_fallbacks:
   - home: ["home-tiny", "home-remote"]
@@ -33,7 +28,7 @@ llamaswap_models:
       --presence-penalty 1.5
       --jinja
       --fit on
-      --fit-target 768
+      --fit-target 2500
       -np 2
     supports_function_calling: true
     supports_vision: true
@@ -61,12 +56,14 @@ llamaswap_models:
       --presence-penalty 1.5
       --jinja
       --fit on
-      --fit-target 768,5120
+      --fit-target 2500
       --swa-checkpoints 0
     supports_function_calling: true
     supports_vision: true
     supports_reasoning: false
-    group: "big_boys"
+    group: "3090"
+    env:
+      - "CUDA_VISIBLE_DEVICES={{ampere_gpu_uuid}}"
 
   - alias: Qwen3-VL-32B-Instruct
     cmd: >-
@@ -85,7 +82,7 @@ llamaswap_models:
       --presence-penalty 1.5
       --jinja
       --fit on
-      --fit-target 768
+      --fit-target 2500
     supports_function_calling: true
     supports_vision: true
     supports_reasoning: false
@@ -110,7 +107,7 @@ llamaswap_models:
       --presence-penalty 0.0
       --jinja
       --fit on
-      --fit-target 768
+      --fit-target 2500
     supports_function_calling: true
     supports_vision: true
     supports_reasoning: true
@@ -135,7 +132,7 @@ llamaswap_models:
       --repeat-penalty 1.05
       --jinja
       --fit on
-      --fit-target 768
+      --fit-target 2500
     supports_function_calling: true
     supports_vision: false
     supports_reasoning: false
@@ -157,7 +154,7 @@ llamaswap_models:
       --min-p 0.01
       --jinja
       --fit on
-      --fit-target 768
+      --fit-target 2500
     supports_function_calling: true
     supports_vision: true
     supports_reasoning: false
@@ -181,7 +178,7 @@ llamaswap_models:
       --n-predict 16384
       --jinja
       --fit on
-      --fit-target 768
+      --fit-target 2500
       -np 2
     supports_function_calling: true
     supports_vision: true
@@ -213,12 +210,14 @@ llamaswap_models:
       --n-cpu-moe 15
       --jinja
       --fit on
-      --fit-target 768,5120
+      --fit-target 2500
       --swa-checkpoints 0
     supports_function_calling: true
     supports_vision: false
     supports_reasoning: false
-    group: "big_boys"
+    group: "3090"
+    env:
+      - "CUDA_VISIBLE_DEVICES={{ampere_gpu_uuid}}"
 
   - alias: gpt-oss-120b
     cmd: >-
@@ -253,41 +252,6 @@ llamaswap_models:
         chat_template_kwargs:
           reasoning_effort: "low"
 
-  - alias: gpt-oss-120b-hybrid
-    cmd: >-
-      /app/llama-server
-      -hf unsloth/gpt-oss-120b-GGUF:F16
-      --port ${PORT}
-      --ctx-size 16384
-      --n-predict 16384
-      --n-gpu-layers 99
-      -fa on
-      --cache-type-k q4_0
-      --cache-type-v q4_0
-      --temp 1.0
-      --min-p 0.0
-      --top-p 1.0
-      --top-k 0.0
-      -ot ".*attn_.*=CUDA0"
-      -ot ".*ffn_(norm|gate_inp).*=CUDA0"
-      -ot "blk\\.([0-4])\\.ffn_.*_exps.*=CUDA1"
-      -ot "blk\\.([5-9]|1[0-9]|2[0-4])\\.ffn_.*_exps.*=CPU"
-      -ot "blk\\.(2[5-9]|3[0-5])\\.ffn_.*_exps.*=CUDA0"
-      --ubatch-size 512
-      --jinja
-      --swa-checkpoints 0
-    supports_function_calling: true
-    supports_vision: false
-    supports_reasoning: true
-    group: "big_boys"
-    variants:
-      high:
-        chat_template_kwargs:
-          reasoning_effort: "high"
-      low:
-        chat_template_kwargs:
-          reasoning_effort: "low"
-
   - alias: GPT-OSS-20B-F16
     cmd: >-
       /app/llama-server
@@ -302,40 +266,12 @@ llamaswap_models:
       --top-k 0
       --jinja
       --fit on
-      --fit-target 768
+      --fit-target 2500
     supports_function_calling: true
     supports_vision: false
     group: "3090"
     env:
       - "CUDA_VISIBLE_DEVICES={{ampere_gpu_uuid}}"
-    variants:
-      high:
-        chat_template_kwargs:
-          reasoning_effort: "high"
-      low:
-        chat_template_kwargs:
-          reasoning_effort: "low"
-
-  - alias: GPT-OSS-20B-blackwell
-    cmd: >-
-      /app/llama-server
-      -hf unsloth/gpt-oss-20b-GGUF:F16
-      --port ${PORT}
-      --n-predict 16384
-      --n-gpu-layers 99
-      --cache-type-k q8_0
-      --cache-type-v q8_0
-      --temp 1.0
-      --top-p 1.0
-      --top-k 0
-      --jinja
-      --fit on
-      --fit-target 5120
-    supports_function_calling: true
-    supports_vision: false
-    group: "5060ti"
-    env:
-      - "CUDA_VISIBLE_DEVICES={{blackwell_gpu_uuid}}"
     variants:
       high:
         chat_template_kwargs:
@@ -356,6 +292,7 @@ llamaswap_models:
       openai/gpt-oss-20b
       --served-model-name ${MODEL_ID}
       --port ${PORT}
+      --gpu-memory-utilization 0.85
       --max-num-seqs 1
       --max-num-batched-tokens 2048
       --max-model-len auto
@@ -384,7 +321,7 @@ llamaswap_models:
       --cache-type-k q8_0
       --cache-type-v q8_0
       --fit on
-      --fit-target 1024
+      --fit-target 2500
       -np 4
       -sps 0.5
       --seed 3407
@@ -420,12 +357,14 @@ llamaswap_models:
       --min-p 0.01
       --jinja
       --fit on
-      --fit-target 1024,5120
+      --fit-target 2500
       -np 2
     supports_function_calling: true
     supports_vision: false
     supports_reasoning: true
-    group: "big_boys"
+    group: "3090"
+    env:
+      - "CUDA_VISIBLE_DEVICES={{ampere_gpu_uuid}}"
     variants:
       nothink:
         chat_template_kwargs:
@@ -439,12 +378,6 @@ llamaswap_model_groups:
   "3090":
     swap: true
     exclusive: false
-  "5060ti":
-    swap: true
-    exclusive: false
-  big_boys:
-    swap: true
-    exclusive: true
 
 llamaswap_preload:
   - "{{ model_group_alias.home_tiny }}"
