--- a/roles/llm_inference/tasks/main.yml
+++ b/roles/llm_inference/tasks/main.yml
@@ -1,37 +1,6 @@
 ---
 # tasks file for llm_inference
 
-- name: Ensure Ollama models directory exists
-  ansible.builtin.file:
-    path: "{{ ollama_path }}"
-    state: directory
-    mode: "0755"
-  become: true
-
-- name: Start the Ollama container
-  community.docker.docker_container:
-    name: "{{ ollama_container_name }}"
-    image: "{{ ollama_image }}"
-    pull: true
-    state: started
-    restart_policy: "{{ ollama_restart_policy }}"
-    ports:
-      - "{{ ollama_port }}:{{ ollama_port }}"
-    volumes:
-      - "{{ ollama_path }}:/root/.ollama"
-    device_requests:
-      - driver: nvidia
-        device_ids: ["{{ blackwell_gpu_uuid }}"]
-        capabilities:
-          - [gpu]
-    env:
-      OLLAMA_HOST: "0.0.0.0"
-      OLLAMA_FLASH_ATTENTION: "1"
-      OLLAMA_KV_CACHE_TYPE: "q8_0"
-      OLLAMA_NUM_PARALLEL: "{{ ollama_num_parallel }}"
-      OLLAMA_MAX_LOADED_MODELS: "{{ ollama_max_loaded_models }}"
-  become: true
-
 - name: Ensure llama-swap config directory exists
   ansible.builtin.file:
     path: "{{ llamaswap_config_path }}"
@@ -80,7 +49,7 @@
       - "/usr/bin/docker:/usr/bin/docker"
     device_requests:
       - driver: nvidia
-        count: -1
+        device_ids: ["{{ ampere_gpu_uuid }}"]
         capabilities:
           - [gpu]
     capabilities:
