--- a/group_vars/all/llms.yml
+++ b/group_vars/all/llms.yml
@@ -226,6 +226,8 @@ llamaswap_models:
     supports_function_calling: true
     supports_vision: false
     group: "3090"
+    env:
+      - "CUDA_VISIBLE_DEVICES={{ampere_gpu_uuid}}"
     variants:
       high:
         extra_body:
