ansible: add community.docker collection and update comfyui container exec
- Update requirements.yml with community.docker collection
- Add community.docker collection to ailabs play in setup.yml
- Switch ComfyUI git config to community.docker.docker_container_exec

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,7 @@
 ---
-- src: geerlingguy.pip
-- src: geerlingguy.docker
+roles:
+  - src: geerlingguy.pip
+  - src: geerlingguy.docker
+
+collections:
+  - name: community.docker
