--- a/roles/comfyui/tasks/main.yml
+++ b/roles/comfyui/tasks/main.yml
@@ -44,9 +44,15 @@
   become: true
 
 - name: Configure git safe.directory for ComfyUI
-  community.docker.docker_exec:
+  community.docker.docker_container_exec:
     container: "{{ comfyui_container_name }}"
-    command: git config --global --add safe.directory /root/ComfyUI
+    argv:
+      - git
+      - config
+      - --global
+      - --add
+      - safe.directory
+      - /root/ComfyUI
   changed_when: false
   # Retry in case container was just started
   retries: 3
