--- a/setup.yml
+++ b/setup.yml
@@ -65,6 +65,8 @@
 - name: Setup ailabs
   hosts: ailab_ubuntus
   ignore_unreachable: true
+  collections:
+    - community.docker
   roles:
     - { role: basic, become: true, tags: [basic] }
     - { role: netplan-static-ip, become: true, tags: [netplan, network] }
