llm_tools: add MiniMax-M2.5 support to LiteLLM proxy

--- a/roles/llm_tools/tasks/main.yml
+++ b/roles/llm_tools/tasks/main.yml
@@ -96,6 +96,7 @@
             GEMINI_API_KEY: "{{ GEMINI_API_KEY }}"
             OPENROUTER_API_KEY: "{{ OPENROUTER_API_KEY }}"
             ANTHROPIC_API_KEY: "{{ ANTHROPIC_API_KEY }}"
+            MINIMAX_API_KEY: "{{ MINIMAX_API_KEY }}"
             NODE_EXTRA_CA_CERTS: /etc/ssl/certs/ca-certificates.crt
           command: ["--config", "/app/config.yaml", "--port", "{{ litellm_proxy_port_container }}"]
           deploy:
