--- a/group_vars/all/llms.yml
+++ b/group_vars/all/llms.yml
@@ -114,6 +114,37 @@ llamaswap_models:
         chat_template_kwargs:
           enable_thinking: false
 
+  - alias: Qwen3.5-35B-A3B-Instruct
+    cmd: >-
+      /app/llama-server
+      -hf unsloth/Qwen3.5-35B-A3B-GGUF:MXFP4_MOE
+      --port ${PORT}
+      --n-predict 32768
+      --n-gpu-layers 99
+      -fa on
+      --cache-type-k q4_0
+      --cache-type-v q4_0
+      --temp 1.0
+      --top-p 0.95
+      --top-k 20
+      --min-p 0.0
+      --presence-penalty 1.5
+      --jinja
+      --fit on
+      --fit-target 2500
+    supports_function_calling: true
+    supports_vision: true
+    supports_reasoning: true
+    group: "3090"
+    env:
+      - "CUDA_VISIBLE_DEVICES={{ampere_gpu_uuid}}"
+    variants:
+      nothink:
+        temperature: 0.7
+        top_p: 0.8
+        chat_template_kwargs:
+          enable_thinking: false
+
   - alias: Qwen3-Next-80B-A3B-Instruct
     cmd: >-
       /app/llama-server
@@ -302,6 +333,24 @@ llamaswap_models:
       --port ${PORT}
       --embeddings
       --ctx-size 8192
+      --batch-size 8192
+      --n-gpu-layers 99
+    supports_function_calling: false
+    supports_vision: false
+    supports_reasoning: false
+    encoding_format: "float"
+    group: "forever"
+    env:
+      - "CUDA_VISIBLE_DEVICES={{ampere_gpu_uuid}}"
+
+  - alias: nomic-embed-text-v2-moe
+    cmd: >-
+      /app/llama-server
+      -hf nomic-ai/nomic-embed-text-v2-moe-GGUF:Q6_K
+      --port ${PORT}
+      --embeddings
+      --ctx-size 8192
+      --batch-size 8192
       --n-gpu-layers 99
     supports_function_calling: false
     supports_vision: false
