--- a/group_vars/all/llms.yml
+++ b/group_vars/all/llms.yml
@@ -3,7 +3,7 @@ model_group_alias:
   home-fast: "Qwen3.5-35B-A3B-Instruct-nothink"
   home-smart: "Qwen3.5-35B-A3B-Instruct"
   home-vision: "Qwen3.5-35B-A3B-Instruct"
-  home-tiny: "Qwen3.5-35B-A3B-Instruct"
+  home-tiny: "Qwen3.5-35B-A3B-Instruct-nothink"
   home-embed: "embeddinggemma"
 
 litellm_fallbacks:
